--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
+  background-color: #f7f7f7;
 }
 
 header {
@@ -8,7 +9,7 @@ header {
 
 header h1 {
   margin-bottom: 0;
-  color: rgb(239, 148, 2);
+  color: #770082;
 }
 
 hr {
@@ -25,16 +26,43 @@ footer {
   margin: 80px auto;
   max-width: 600px;
   padding: 25px 30px;
+  border-radius: 7px;
+  background-color: #f9f9ff;
 }
 
 .temperature,
 .weather-icon {
-  font-size: 5rem;
   line-height: 1;
 }
 
-.weather-icon {
-  color: rgb(255, 201, 22);
+.temperature {
+  font-size: 5rem;
+  padding-left: 15px;
+}
+
+.filter-sun {
+  filter: invert(91%) sepia(15%) saturate(5962%) hue-rotate(338deg)
+    brightness(102%) contrast(114%);
+}
+
+.filter-night {
+  filter: invert(10%) sepia(85%) saturate(2752%) hue-rotate(234deg)
+    brightness(91%) contrast(130%);
+}
+
+.cloud-filter {
+  filter: invert(72%) sepia(81%) saturate(5703%) hue-rotate(215deg)
+    brightness(90%) contrast(85%);
+}
+
+.rain-filter {
+  filter: invert(52%) sepia(6%) saturate(1956%) hue-rotate(192deg)
+    brightness(96%) contrast(85%);
+}
+
+.snow-filter {
+  filter: invert(83%) sepia(10%) saturate(2222%) hue-rotate(197deg)
+    brightness(92%) contrast(88%);
 }
 
 .units {
@@ -53,7 +81,7 @@ footer {
 }
 
 .weather-condition {
-  color: rgb(255, 201, 22);
+  color: #7842a5;
   padding-bottom: 5px;
   font-weight: 600;
 }
