--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,14 @@ footer {
   padding-top: 25px;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: default;
+}
+
 .weather-app {
   box-shadow: 0 30px 50px rgb(65 50 100 / 8%);
   display: block;
@@ -91,6 +99,11 @@ footer {
 
 .units {
   line-height: 2.5;
+}
+
+.units .active {
+  color: #000;
+  text-decoration: none;
 }
 
 .current-date {
