--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,8 @@ hr {
 }
 
 footer {
-  padding-top: 40px;
+  padding-top: 60px;
+  text-align: center;
 }
 
 a {
@@ -72,31 +73,6 @@ a:hover {
 .temperature {
   font-size: 5rem;
   padding-left: 15px;
-}
-
-.filter-sun {
-  filter: invert(91%) sepia(15%) saturate(5962%) hue-rotate(338deg)
-    brightness(102%) contrast(114%);
-}
-
-.filter-night {
-  filter: invert(10%) sepia(85%) saturate(2752%) hue-rotate(234deg)
-    brightness(91%) contrast(130%);
-}
-
-.cloud-filter {
-  filter: invert(72%) sepia(81%) saturate(5703%) hue-rotate(215deg)
-    brightness(90%) contrast(85%);
-}
-
-.rain-filter {
-  filter: invert(52%) sepia(6%) saturate(1956%) hue-rotate(192deg)
-    brightness(96%) contrast(85%);
-}
-
-.snow-filter {
-  filter: invert(83%) sepia(10%) saturate(2222%) hue-rotate(197deg)
-    brightness(92%) contrast(88%);
 }
 
 .units {
