--- a/src/style.css
+++ b/src/style.css
@@ -77,11 +77,7 @@ a:hover {
 
 .units {
   line-height: 2.5;
-}
-
-.units .active {
-  color: #000;
-  text-decoration: none;
+  font-size: 18px;
 }
 
 .current-date {
